Added content to pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ol>
         <li><a href="recipes/crepe.html">Crepe</a></li>
         <li><a href="recipes/toast.html">French Toast</a></li>
-        <li><a href="recips/muffins.html">Blueberry muffins</a></li>
+        <li><a href="recipes/muffins.html">Blueberry muffins</a></li>
     </ol>
 </body>
 </html>
