--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -8,6 +8,37 @@
 </head>
 <body>
     <h1>Blueberry Muffins</h1>
-    <img src="muffins.jpg" alt="Blueberry Muffins">
+    <img src="muffins.jpg" alt="Blueberry Muffins" height="250" width="400">
+    <p>An awesome healthy alternative to the usual blueberry muffin.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>3/4 cup all-purpose flour</li>
+        <li>3/4 cup whole wheat flour</li>
+        <li>3/4 cup white sugar</li>
+        <li>1/4 cup oat bran</li>
+        <li>1/4 cup quick cooking oats</li>
+        <li>14 cup wheat germ</li>
+        <li>1 teaspoon baking powder</li>
+        <li>1 teaspoon baking soda</li>
+        <li>1/4 teaspoon salt</li>
+        <li>1 cup blueberries</li>
+        <li>1/2 cup chopped walnuts</li>
+        <li>1 banana, mashed</li>
+        <li>1 cup buttermilk</li>
+        <li>1 egg</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 teaspoon vanilla extract</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C).
+            Grease a 12 cup muffin pan, or line with paper muffin cups.</li>
+        <li>In a large bowl, stir together the all-purpose flour, whole wheat flour, sugar, oat bran, quick-cooking oats, wheat germ, baking powder, baking soda and salt.
+            Gently stir in the blueberries and walnuts. </li>
+        <li>n a separate bowl, mix together the mashed banana, buttermilk, egg, oil and vanilla. Pour the wet ingredients into the dry, and mix just until blended.</li>
+        <li>Spoon into muffin cups, filling all the way to the top.</li>
+        <li>Bake for 15 to 18 minutes in the preheated oven, or until the tops of the muffins spring back when lightly touched.</li>
+    </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
