--- a/recipes/crepe.html
+++ b/recipes/crepe.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <h1>Breakfast Crepe</h1>
-    <img src="crepe.jpg" alt="Crepe">
+    <img src="crepe.jpg" alt="Crepe" height="250" width="400">
+    <p>Essential crepe recipe. Sprinkle warm crepes with sugar and lemon, or serve with cream or ice cream and fruit.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>4 eggs, lightly beaten</li>
+        <li>1/3 cups milk</li>
+        <li>2 tablespoons butter, melted</li>
+        <li>1 cup all-purpose flour</li>
+        <li>2 tablespoons white sugar</li>
+        <li>1/2 teaspoon salt</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>In large bowl, whisk together eggs, milk, melted butter, flour sugar and salt until smooth.</li>
+        <li>Heat a medium-sized skillet or crepe pan over medium heat. Grease pan with a small amount of butter or oil applied with a brush or paper towel.</li>
+        <li>Using a serving spoon or small ladle, spoon about 3 tablespoons crepe batter into hot pan, tilting the pan so that bottom surface is evenly coated.</li>
+        <li>Cook over medium heat, 1 to 2 minutes on a side, or until golden brown.Serve immediately.</li>
+    </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
