--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -8,6 +8,25 @@
 </head>
 <body>
     <h1>French Toast</h1>
-    <img src="toast.jpg" alt="French Toast">
+    <img src="toast.jpg" alt="French Toast" height="250" width="400">
+    <p>There are many, fancy variations on this basic recipe. This recipe works with many types of bread - white, whole wheat, cinnamon-raisin, Italian or French.
+        Serve hot with butter or margarine and maple syrup.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>6 thick slices bread</li>
+        <li>2 eggs</li>
+        <li>2/3 cup milk</li>
+        <li>1/4 teaspoon ground cinnamon (Optional)</li>
+        <li>1/4 teaspoon ground nutmeg</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>salt to taste</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Beat together egg, milk, salt, desired spices and vanilla</li>
+        <li>Heat a lightly oiled griddle or skillet over medium-high heat.</li>
+        <li>Dunk each slice of bread in egg mixture, soaking both sides. Place in pan, and cook on both sides until golden. Serve hot.</li>
+    </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
