Added style.css file

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="recipe.jpg" alt="Title image">
-    <br>
-    <ol>
-        <li><a href="recipes/crepe.html">Crepe</a></li>
-        <li><a href="recipes/toast.html">French Toast</a></li>
-        <li><a href="recipes/muffins.html">Blueberry muffins</a></li>
-    </ol>
+    <div class="banner">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div class="recipe-card">
+        <img src="recipe.jpg" alt="Title image">
+        <br>
+        <div class="recipes"></div>
+        <ol class="recipe-list">
+            <li><a href="recipes/crepe.html">Crepe</a></li>
+            <li><a href="recipes/toast.html">French Toast</a></li>
+            <li><a href="recipes/muffins.html">Blueberry muffins</a></li>
+        </ol>
+    </div>
 </body>
 </html>
